# bsplugins-extended

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake_env.txt  plugindefinition.json  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  ParseTES.cmake  bsplugins_en.ts
src/BSPluginInfo/: PluginRecordView.cpp  RecordStructureModel.cpp
src/BSPluginList/: ConflictIconDelegate.cpp  FlagIconDelegate.cpp  PluginGroupProxyModel.cpp  PluginGroupProxyModel.h  PluginListContextMenu.cpp  PluginListModel.cpp  PluginListModel.h  PluginListStyledItemDelegate.cpp  PluginListView.cpp  PluginListView.h  PluginSortFilterProxyModel.h  PluginsWidget.cpp  PluginsWidget.h  pluginswidget.ui
src/GUI/: CopyEventFilter.cpp  CopyEventFilter.h  GenericIconDelegate.h  IconDelegate.h  ListDialog.h  MessageDialog.cpp  MessageDialog.h  SelectionDialog.h  ViewMarkingScrollBar.cpp  ViewMarkingScrollBar.h
src/MOPlugin/: BSPlugins.cpp  BSPlugins.h  IPanelInterface.h  IPluginPanel.cpp  MOPanelInterface.cpp  Settings.cpp  Settings.h
src/MOTools/: ILootCache.h  Loot.cpp  LootDialog.cpp  LootGroups.cpp  json.h
src/TESData/: FileConflictParser.cpp  FileConflictParser.h  FileEntry.cpp  FileEntry.h  FileInfo.cpp  FileInfo.h  PluginList.cpp  PluginList.h
src/TESFile/: Stream.h
